# cpm

./: CMakeLists.txt  vcpkg.json
cmake/: Arch.cmake  Options.cmake
cmake/cpack/: Windows.cmake
cmake/download/: Cmake.cmake  Download.cmake  Git.cmake
cmake/package/: FindCLI11.cmake  FindFTXUi.cmake  FindNcurses.cmake  FindNlohmann.cmake  Package.cmake
include/: main.hpp
include/commands/: command.hpp  init.hpp
include/core/: application.hpp  vcpkg.hpp
include/core/actor/: actor.hpp  async_actor.hpp  message.hpp  message_interface.hpp
include/core/impl/: vcpkg.hpp
include/core/service/: service.hpp  vcpkg.hpp
include/core/vcpkg/: vcpkg.hpp
include/utils/: console.hpp  file.hpp
resources/nsis/: NSIS.InstallOptions.ini.in  NSIS.definitions.nsh.in  NSIS.template.in
src/: main.cpp
src/commands/: init.cpp
src/core/: application.cpp  vcpkg.cpp
src/core/service/: vcpkg.cpp
src/core/vcpkg/: vcpkg.cpp
src/utils/: console.cpp  file.cpp
